--- a/Program/ConsoleApp.csproj
+++ b/Program/ConsoleApp.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\GenchoModels\GenchoModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.OleDb" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
